--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,40 @@
 
 
     <!---Font Awesome CDN link-->
-<link rel="stylesheet" type=""text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!----Style sheet link-->
-
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-    
+
+    <!---Header Starts-->
+
+    <header>
+
+        <div id="menu" class="fas fa-bars"></div>
+
+        <nav class="navbar">
+
+            <a href="#home"></a>
+            <a href="#about"></a>
+            <a href="#services"></a>
+            <a href="#portfolio"></a>
+            <a href="#blog"></a>
+            <a href="#contact"></a>
+
+        </nav>
+    </header>
+
+    <!---Header Ends-->
+
+
+
+    <!----JQUERY CDN-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <!---custom javascript Link-->
+    <script src="js/script.js"></script>
 </body>
+
 </html>
